--- a/style.css
+++ b/style.css
@@ -1,1 +1,463 @@
-placeholder
+@import url(https://fonts.google.com/share?selection.family=Bebas%20Neue%7CMontserrat:ital,wght@0,400;0,700;1,400);
+
+html{
+  background-color: rgba(122, 191, 191, 0.5);
+}
+
+body{
+  background-color: #f2f2f2;
+  margin: 0 auto;
+  width: 414px;
+  display: grid;
+}
+
+h1, h2, h3, nav a, nav span, figcaption, menu li, #social li, footer{
+  font-family: 'Bebas Neue', cursive;
+}
+p, dt, dd, li, nav, input{
+  font-family: 'Montserrat', sans-serif;
+  font-size: 16px;
+}
+nav a, nav span, figcaption, menu li, #social li, footer {
+  font-size: 20px;
+}
+
+nav h2, #details span, form h3, footer h2, footer h3 {
+  visibility: hidden;
+  position: absolute; 
+}
+
+main ul{
+  list-style-type: square;
+}
+
+main section li{
+  margin: 20px;
+}
+
+section, p{
+  padding: 12px;
+}
+
+h1{
+  font-size: 40px;
+  text-align: center;
+}
+h2{
+  font-size: 30px;
+  text-align: center;
+}
+h3{
+  font-size: 25px;
+}
+
+dt{
+  font-weight: bold;
+}
+a{
+  text-decoration: none;
+}
+
+#details dt, #details dd{
+  display: inline;
+}
+#details dd{
+  margin-left: 10px;
+}
+
+
+
+nav{
+  position: relative;
+}
+
+nav ul{
+  background-color: #ffffff;
+  width: 414px;
+  height: 0px;
+  position: fixed;
+  overflow: hidden;
+  padding-top: 75px;
+}
+
+nav li a {
+  display: block;
+  padding: 15px;
+}
+
+nav img, nav input{
+  display: none;
+}
+
+[for="dropdown"], nav li:first-child, nav li:last-child {
+  display: block;
+  height: 75px;                         
+}
+
+[for="dropdown"] {
+  cursor: pointer;
+  position: fixed;
+  width: 100px;
+  padding: 10px 0 0;
+  z-index: 1;
+}
+
+nav li:first-child, nav li:last-child {
+    position: absolute;
+}
+
+nav li:first-child {
+    left: 100px;
+    width: 225px;
+}
+
+nav li:last-child {
+    right: 0;
+    width: 75px;
+}
+
+[href="#home"], [href="#user"] {
+    display: block;
+    height: 100%;
+    padding: 10px 0 0;
+}
+
+[href="#user"]:hover, [href="#home"] {
+    background-color: #EB5428;
+}
+
+  [href="#home"], nav form {
+    transition-duration: 0.5s;
+}
+
+menu li, menu a, nav figure, #social a, nav [for="dropdown"]{
+  display: flex;
+  align-items: center;
+}
+
+menu li:hover{
+  cursor: pointer;
+}
+
+menu, nav ul, #social ul{
+  list-style: none
+}
+
+menu, #social ul{
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+
+menu li, menu a, nav a, #social a{
+  color: #eb5428;
+}
+
+menu li:hover span, #social a:hover span, nav a:hover {
+  background-color: #eb5428;
+  color: white;
+}
+
+
+form{
+  width: 300px;
+  height: 42px;
+  display: grid;
+  grid-template-columns: 85% 15%;
+}
+#search-bar input, #search-bar button {
+    display: inline-block;
+    height: 100%;
+    border: 2.5px solid #eb5428;
+}
+#search-bar input {
+    padding-left: 5px;
+}
+#search-bar button {
+    background-color: #eb5428;
+}
+
+
+aside{
+  background-color: #7abfbf;
+}
+
+aside a{
+  display: grid;
+  height: 100px;
+  color: #000000;
+  grid-template-rows: repeat(3, 1fr);
+  grid-template-columns: 25% 75%;
+  column-gap: 15px;
+}
+
+aside a:hover{
+  background-color: orange;
+}
+
+aside a img {
+    grid-column: 1/2;
+    grid-row: 1/5;
+}
+
+aside p {
+    grid-column: 2/3;
+    grid-row: 2/3;
+    margin-top: 10px;
+    padding: 0;
+}
+aside svg {
+    margin-right: 5px;
+}
+.fourStars svg:nth-last-of-type(n+2), .fiveStars svg {
+    fill: #eb5428;
+}
+
+
+footer{
+  background-color: #ffffff;
+  margin-top: 20px;
+}
+
+#social{
+  margin-bottom: 20px;
+}
+
+footer small{
+  position: absolute;
+  left: 150px;
+}
+
+
+
+@media screen and (min-width:768px) {
+  
+  body, header div, nav ul, menu {
+     width: 768px;
+  }
+
+  h1 {
+     margin-top: 200px;
+     margin-left: 15px;
+     text-align: left;
+  }
+  
+  header figure {
+     position: relative;
+  }
+  main {
+     display: grid;
+     grid-template-columns: 25% 75%;
+  }
+  
+  #details, aside {
+     grid-column: 1/3;
+  }
+    
+  #details dl {
+     text-align: center;
+  }
+  
+  #ingredients {
+     grid-column: 1/2;
+     margin-bottom: -20px;
+  }
+  
+  aside {
+     display: grid;
+     grid-auto-columns: 50% 50%;
+  }
+
+  aside h2 {
+     grid-column: 1/3;
+  }
+  
+  aside a {
+     padding: 0;
+     margin-bottom: 10px;
+  }
+  
+ aside dt, aside dd, aside figure {
+     display: inline;
+  }
+
+    menu {
+        height: 100px;
+        align-content: center;
+        padding: 0;
+        position: absolute;
+        z-index: 1;
+        backdrop-filter: blur(3px);
+        background-color: rgba(255,255,255,0.7);
+    }
+  
+    nav ul {
+        display: grid;
+        grid-template-columns: repeat(7, 1fr);
+        z-index: 2;
+        max-height: 200px;    
+    }
+  
+    [for="dropdown"] > *, nav input {
+        display: none;
+    }
+  
+    nav li:first-child {
+        left: 0;
+        width: 80px;
+    }
+  
+    nav img {
+        width: 50px;
+        display: block;
+    }
+  
+    form {
+        position: fixed;
+        top: 20px;
+        margin: 0 0 0 355px;
+        z-index: 2;
+    }
+
+  
+    footer {
+        margin-top: 0;
+    }
+  
+    footer section {
+        display: flex;
+        justify-content: center;
+    }
+  
+    #social {
+        width: 60%;
+    }
+    #social ul {
+        width: 100%;
+        justify-content: space-between;
+    }
+    footer small {
+        left: 150px;
+    }
+}
+
+/*Large Screen Size Styles*/
+@media screen and (min-width:1280px) {
+   
+  body, nav ul {
+    width: 1280px;
+  }
+  
+  header {
+    display: grid;
+    grid-template-columns: 10% 39% 51%;
+    grid-template-rows: auto 768px;
+    line-height: 2;                         
+  }
+  
+  header div {
+    width: 650px;
+  }
+  
+  h1 {
+    text-align: center;
+    margin: 0;
+    grid-column: 1/5;
+  }   
+  
+  #details {
+    color: #7abfbf;
+    background-color: #000000;
+  }
+  
+  #details h2 {
+    margin-bottom: 15px;
+  }
+  
+  #details dd {
+    display: block;
+  }
+  
+  #details dl {
+    display: flex;
+    justify-content: space-around;
+  }
+  
+  aside {
+    grid-auto-columns: 20%;
+    justify-content: space-around;
+  }
+  
+  aside h2 {
+    margin: 10px;
+    grid-column: 1/5;
+ }
+  
+  aside a  {
+    display: flex;
+    height: auto;
+    margin-bottom: 10px;
+    padding-bottom: 10px;
+  }
+  
+  aside h3, aside p, aside dl {
+    padding-left: 10px;
+  } 
+  
+  aside p {
+    margin: 10px 30px 10px 0;
+  }
+
+  menu {
+    position: static;
+    grid-template-columns: 1fr;
+    width: auto;
+    height: auto;
+    align-content: start;
+    border: 2px solid #eb5428;
+    background-color: #ffffff;
+  }
+  
+  menu li {
+    margin-top: 30px;
+  }
+  
+  nav ul {
+    padding: 0;
+    max-height: 120px;
+    grid-template-columns: repeat(7, 120px);
+    justify-content: center;
+  }
+  
+  [href="#home"], nav li:last-child {
+    height: 120px;
+    width: 120px;
+  }
+  
+  [href="#home"] svg {
+    padding-top: 10px;
+  }
+  
+  nav li:last-child figure {
+    padding-top: 10px;
+  }
+  
+  form {
+    width: 300px;
+    height: 42px;
+    position: static;
+    margin: 160px auto 15px;
+  }
+
+  
+    footer section {
+        justify-content: space-around;
+    }
+    #social {
+        width: 50%;
+    }
+
+    footer small {
+        top: 25px;
+        left: 230px;
+    }
+}
