--- a/style.css
+++ b/style.css
@@ -11,6 +11,18 @@ body{
   display: grid;
 }
 
+header{
+  margin: auto;
+  line-height: 1.5;
+}
+
+header figure{
+  width: 100%;
+  padding: 0;
+  margin-left: 0;
+  
+}
+
 h1, h2, h3, nav a, nav span, figcaption, menu li, #social li, footer{
   font-family: 'Bebas Neue', cursive;
 }
@@ -22,9 +34,13 @@ nav a, nav span, figcaption, menu li, #social li, footer {
   font-size: 20px;
 }
 
-nav h2, #details span, form h3, footer h2, footer h3 {
+nav h2, [href="home"] figcaption, #details span, form h3, footer h2, footer h3 {
   visibility: hidden;
   position: absolute; 
+}
+
+header, #details, main section li{
+  line-height:1.5;
 }
 
 main ul{
@@ -33,9 +49,10 @@ main ul{
 
 main section li{
   margin: 20px;
+  line-height: 1.5;
 }
 
-section, p{
+main > section, p{
   padding: 12px;
 }
 
@@ -58,6 +75,10 @@ a{
   text-decoration: none;
 }
 
+img{
+  width: 100%;
+}
+
 #details dt, #details dd{
   display: inline;
 }
@@ -65,16 +86,29 @@ a{
   margin-left: 10px;
 }
 
+#ingredients{
+  margin-bottom: -25px;
+}
+
+#directions{
+  margin-bottom: -15px;
+}
+
+
 
 
 nav{
+  width: 414px;
   position: relative;
+  grid-row: 1/2;
+  background-color: #ffffff;
 }
 
 nav ul{
   background-color: #ffffff;
   width: 414px;
   height: 0px;
+  list-style: none;
   position: fixed;
   overflow: hidden;
   padding-top: 75px;
@@ -85,8 +119,12 @@ nav li a {
   padding: 15px;
 }
 
-nav img, nav input{
+nav img, nav > input{
   display: none;
+}
+
+nav input checked ~ ul{
+  max-height: 500px;
 }
 
 [for="dropdown"], nav li:first-child, nav li:last-child {
@@ -96,6 +134,7 @@ nav img, nav input{
 
 [for="dropdown"] {
   cursor: pointer;
+  display: block;
   position: fixed;
   width: 100px;
   padding: 10px 0 0;
@@ -103,7 +142,8 @@ nav img, nav input{
 }
 
 nav li:first-child, nav li:last-child {
-    position: absolute;
+  position: absolute;
+  top: 0;
 }
 
 nav li:first-child {
@@ -116,27 +156,37 @@ nav li:last-child {
     width: 75px;
 }
 
-[href="#home"], [href="#user"] {
-    display: block;
-    height: 100%;
-    padding: 10px 0 0;
+[href="#home"], [href="#signIn"] {
+  color: #000000;  
+  display: block;
+  height: 100%;
+  padding: 10px 0 0;
 }
 
-[href="#user"]:hover, [href="#home"] {
-    background-color: #EB5428;
+[href="#signIn"]:hover, [href="#home"] {
+    background-color: #eb5428;
 }
 
   [href="#home"], nav form {
     transition-duration: 0.5s;
 }
 
+nav figure, nav [for="dropdown"]{
+  justify-content: flex-end;
+}
+
 menu li, menu a, nav figure, #social a, nav [for="dropdown"]{
   display: flex;
   align-items: center;
+  flex-direction: column-reverse;
 }
 
 menu li:hover{
   cursor: pointer;
+}
+
+menu{
+  padding: 0 10px;
 }
 
 menu, nav ul, #social ul{
@@ -158,16 +208,19 @@ menu li:hover span, #social a:hover span, nav a:hover {
 }
 
 
+
+
 form{
   width: 300px;
-  height: 42px;
+  height: 40px;
+  margin: auto;
   display: grid;
   grid-template-columns: 85% 15%;
 }
 #search-bar input, #search-bar button {
     display: inline-block;
     height: 100%;
-    border: 2.5px solid #eb5428;
+    border: 3px solid #eb5428;
 }
 #search-bar input {
     padding-left: 5px;
@@ -177,17 +230,21 @@ form{
 }
 
 
+
 aside{
   background-color: #7abfbf;
+  padding-bottom: 0;
 }
 
 aside a{
   display: grid;
   height: 100px;
+  padding-bottom: 10px;
   color: #000000;
   grid-template-rows: repeat(3, 1fr);
   grid-template-columns: 25% 75%;
   column-gap: 15px;
+  align-items: start;
 }
 
 aside a:hover{
@@ -216,6 +273,7 @@ aside svg {
 footer{
   background-color: #ffffff;
   margin-top: 20px;
+  padding: 40px 0 20px;
 }
 
 #social{
@@ -224,6 +282,18 @@ footer{
 
 footer small{
   position: absolute;
+  left: 150px;
+}
+
+footer figure{
+  position: relative;
+  padding-bottom: 55px;
+  text-align: center;
+}
+
+footer [src="images/taco-cheesington.png"]{
+  display: block;
+  width: 50%;
   left: 150px;
 }
 
@@ -242,7 +312,8 @@ footer small{
   }
   
   header figure {
-     position: relative;
+    position: relative;
+    margin-top: -10px;
   }
   main {
      display: grid;
@@ -263,8 +334,9 @@ footer small{
   }
   
   aside {
-     display: grid;
-     grid-auto-columns: 50% 50%;
+    display: grid;
+    grid-auto-columns: 50% 50%;
+    grid-auto-flow: row;
   }
 
   aside h2 {
@@ -286,18 +358,18 @@ footer small{
         padding: 0;
         position: absolute;
         z-index: 1;
-        backdrop-filter: blur(3px);
         background-color: rgba(255,255,255,0.7);
     }
   
     nav ul {
-        display: grid;
-        grid-template-columns: repeat(7, 1fr);
-        z-index: 2;
-        max-height: 200px;    
+       display: grid;
+       grid-template-columns: repeat(7, 1fr);
+       z-index: 2;
+       max-height: 150px;    
+      padding: 0;
     }
   
-    [for="dropdown"] > *, nav input {
+    [for="dropdown"] > nav input {
         display: none;
     }
   
@@ -324,8 +396,9 @@ footer small{
     }
   
     footer section {
-        display: flex;
-        justify-content: center;
+      display: flex;
+      justify-content: center;
+      flex-direction: row-reverse;
     }
   
     #social {
@@ -340,16 +413,16 @@ footer small{
     }
 }
 
-/*Large Screen Size Styles*/
+
 @media screen and (min-width:1280px) {
    
-  body, nav ul {
+  body, header, nav, nav ul {
     width: 1280px;
   }
   
   header {
     display: grid;
-    grid-template-columns: 10% 39% 51%;
+    grid-template-columns: 10% 40% 50%;
     grid-template-rows: auto 768px;
     line-height: 2;                         
   }
@@ -397,11 +470,16 @@ footer small{
     height: auto;
     margin-bottom: 10px;
     padding-bottom: 10px;
+    flex-direction: column;
   }
   
   aside h3, aside p, aside dl {
     padding-left: 10px;
   } 
+  
+  aside img{
+    margin-bottom: 20px;
+  }
   
   aside p {
     margin: 10px 30px 10px 0;
@@ -423,6 +501,7 @@ footer small{
   
   nav ul {
     padding: 0;
+    margin-top: -75px;
     max-height: 120px;
     grid-template-columns: repeat(7, 120px);
     justify-content: center;
@@ -443,7 +522,7 @@ footer small{
   
   form {
     width: 300px;
-    height: 42px;
+    height: 40px;
     position: static;
     margin: 160px auto 15px;
   }
@@ -455,9 +534,19 @@ footer small{
     #social {
         width: 50%;
     }
-
+  
     footer small {
         top: 25px;
         left: 230px;
     }
+  
+  footer figure{
+    width: 400px;
+    margin-left: -75px;
+  }
+  
+  footer [src="images/taco-cheesington.png"]{
+    width: 225px;
+    margin: 10px;
+  }
 }
